--- a/styles.css
+++ b/styles.css
@@ -3,10 +3,96 @@
     padding: 0;
 }
 
+body {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: hsl(0, 0%, 100%);
+    background-color: hsl(217, 54%, 11%);
+    height: 100vh;
+    font-family: 'Outfit', sans-serif;
+}
+
 .cardContainer {
     display: flex;
+    align-items: center;
     flex-direction: column;
-    width: 300px;
-    height: 300px;
-    background-color: aqua;
+    width: 330px;
+    height: 550px;
+    background-color: hsl(216, 50%, 16%);
+    border-radius: 3.5%;
+}
+
+.cardFooter {
+    padding: 0px 20px;
+}
+
+.img {
+    width: 290px;
+    border-radius: 3.5%;
+    margin: 20px;
+}
+
+.title {
+    font-size: large;
+    padding-top: 0px;
+}
+
+.bioText {
+    color: hsl(215, 51%, 70%);
+    font-size: medium;
+    padding-top: 20px;
+    font-weight: 100;
+}
+
+.ethTimeContainer {
+    display: flex;
+    justify-content: space-between;
+    padding-top: 20px;
+}
+
+.ethContainer {
+    display: flex;
+}
+
+.ethLogo {
+    height: 85%;
+}
+
+.ethText {
+    color: hsl(178, 100%, 50%);
+    padding-left: 5px;
+}
+
+.timeLeftText {
+    color: hsl(215, 51%, 70%);;
+}
+
+.line {
+    background-color: hsl(215, 51%, 70%);
+    height: 2px;
+    width: auto;
+    margin-top: 20px;
+}
+
+.photoNameContainer {
+    display: flex;
+    align-items: center;
+}
+
+.avatarImg {
+    padding-top: 20px;
+    padding-right: 20px;
+    width: 33px;
+}
+
+.creator {
+    padding-top: 20px;
+    display: flex;
+    justify-content: center;
+}
+
+.footer {
+    display: flex;
+    align-items: flex-end;
 }
