--- a/styles.css
+++ b/styles.css
@@ -27,11 +27,46 @@ body {
     padding: 0px 20px;
 }
 
+.imgContainer {
+    position: relative;
+}
+
 .img {
+    display: block;
     width: 290px;
+    height: auto;
     border-radius: 3.5%;
     margin: 20px;
     cursor: pointer;
+}
+
+.imgContainer:hover .overlay {
+    opacity: 0.6;
+  }
+  
+
+.overlay {
+    position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  opacity: 0;
+  transition: .5s ease;
+  background-color: #008CBA;
+  display: block;
+    width: 290px;
+    height: auto;
+    border-radius: 3.5%;
+    margin: 20px;
+}
+
+.eyeLogo {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    -ms-transform: translate(-50%, -50%);
 }
 
 .title {
