final edits, cleaned up code

--- a/styles.css
+++ b/styles.css
@@ -137,7 +137,21 @@ body {
     color: hsl(215, 51%, 70%);
 }
 
+.attribution {
+    font-size: 11px; 
+    text-align: center; 
+}
+
+.attribution a { 
+    color: hsl(228, 45%, 44%); 
+}
+
 .footer {
-    display: flex;
-    align-items: flex-end;
+    position: fixed;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  color: white;
+  text-align: center;
+  padding-bottom: 10px;
 }
